fix: consistency for Configure the CheCluster Custom Resource. fix: moduylarity fix: minimalism

--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -50,7 +50,7 @@ app.kubernetes.io/part-of=che.eclipse.org -n {prod-namespace}
 ----
 <1> The TLS secret name
 
-. Set the following values in the Custom Resource:
+. Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
 [subs="+quotes,+attributes"]
 ----
