--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -17,7 +17,7 @@ You can configure {orch-ingress} labels and annotations, if your organization re
 
 .Procedure
 
-* Configure the `CheCluster` Custom Resource:
+* Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
