--- a/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
+++ b/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
@@ -20,21 +20,15 @@ If the value is `-1`, users can create an unlimited number of workspaces. If the
 
 .Procedure
 
-* In the `CheCluster` Custom Resource `server` settings, configure the number of workspaces that a user can create by adding the `+CHE_LIMITS_USER_WORKSPACES_COUNT+` property to `customCheProperties`:
+* Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
-====
 [source,yaml,subs="+quotes"]
 ----
-apiVersion: org.eclipse.che/v1
-kind: CheCluster
-# ...
 spec:
   server:
-    # ...
     customCheProperties:
       CHE_LIMITS_USER_WORKSPACES_COUNT: "__<number-of-workspaces>__"
 ----
-====
 
 .Additional resources
 
