--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -25,20 +25,17 @@ To enable the Woopra plug-in on the {prod} installation:
 
 * Deploy the `plugin.yaml` devfile v2 file to an HTTP server with the environment variables set correctly.
 
-. Set the `spec.server.workspaceDefaultPlugins` field of your `CheCluster` custom resource:
-
+. Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
++
 [source,yaml]
 ----
 spec:
-  ...
   server:
-    ...
     workspacesDefaultPlugins:
     - editor: eclipse/che-theia/next     <1>
       plugins:                           <2>
       - 'https://your-web-server/plugin.yaml'
 ----
-
 <1> The `editorId` to set the telemetry plug-in for.
 <2> The URL to the telemetry plug-in's devfile v2 definition.
 
