--- a/modules/administration-guide/partials/con_logging-http-traffic.adoc
+++ b/modules/administration-guide/partials/con_logging-http-traffic.adoc
@@ -3,15 +3,16 @@
 [id="logging-http-traffic_{context}"]
 = Logging HTTP traffic
 
-It is possible to log the HTTP traffic between the {prod-short} server and the API server of the {kubernetes} or OpenShift cluster.
-To do that, one has to set the `che.infra.request-logging` logger to the `TRACE` level.
+.Procedure
 
+* To log the HTTP traffic between the {prod-short} server and the API server of the {kubernetes} or OpenShift cluster, configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
++
 [source,yaml]
 ----
-...
-server:
-  customCheProperties:
-    CHE_LOGGER_CONFIG: "che.infra.request-logging=TRACE"
+spec:
+  server:
+    customCheProperties:
+      CHE_LOGGER_CONFIG: "che.infra.request-logging=TRACE"
 ----
 
 .Additional resources
