--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -16,7 +16,7 @@ You can configure labels, annotations, and domains for OpenShift Route to work w
 
 .Procedure
 
-* Configure the `CheCluster` custom resource:
+* Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
 [source,yaml,subs="+quotes"]
 ----
