--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -24,17 +24,13 @@ A valid {orch-namespace} name template follows these conventions:
 
 .Procedure
 
-* Set the `server.workspaceNamespaceDefault` property in CheCluster Custom Resource:
+* Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
-kind: CheCluster
-apiVersion: org.eclipse.che/v1
-# ...
 spec:
   server:
     workspaceNamespaceDefault: __<workspace_namespace_template_>__
-# ...
 ----
 +
 .User workspaces {orch-namespace} name template examples
