--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -8,9 +8,9 @@
 
 == Removing user data according to GDPR
 
-The General Data Protection Regulation (link:https://en.wikipedia.org/wiki/General_Data_Protection_Regulation[GDPR]) law enforces the right for individuals to have personal data erased.
 
 You can remove the {prod-short} user’s data using the {prod-short} API.
+Following this procedure makes the service compliant to EU General Data Protection Regulation (link:https://en.wikipedia.org/wiki/General_Data_Protection_Regulation[GDPR]) that enforces the right for individuals to have personal data erased. 
 
 .Prerequisites
 
