fix: use naming conventions for examples fix: remove obsolete examples

--- a/modules/administration-guide/examples/snip_che-supported-platforms-and-installation-methods.adoc
+++ b/modules/administration-guide/examples/snip_che-supported-platforms-and-installation-methods.adoc
@@ -1,15 +1,9 @@
-// Module included in the following assemblies:
-//
-// supported_platforms
-
-The following section provides information about the availability of {prod-short} {prod-ver} on {platforms-name} infrastructures.
-
-{prod} can be installed on:
+You can install {prod} on:
 
 * {kubernetes} infrastructures starting at version {kube-ver-min}
-* {ocp} starting at version 4.8
+* {ocp} starting at version {ocp4-ver}
 
-{prod} can be installed on all major Public Clouds such as:
+You can install {prod} on all major Public Clouds such as:
 
 * Amazon Web Services
 * Google Cloud
