--- a/modules/administration-guide/pages/supported-platforms.adoc
+++ b/modules/administration-guide/pages/supported-platforms.adoc
@@ -6,5 +6,5 @@
 [id="supported-platforms_{context}"]
 = Supported platforms
 
-include::example$ref_{project-context}-supported-platforms-and-installation-methods.adoc[leveloffset=+1]
+include::example$snip_{project-context}-supported-platforms-and-installation-methods.adoc[leveloffset=+1]
 
