--- a/modules/administration-guide/partials/con_a-workspace-example.adoc
+++ b/modules/administration-guide/partials/con_a-workspace-example.adoc
@@ -7,7 +7,7 @@ This section describes a {prod-short} workspace example.
 
 The following devfile defines the {prod-short} workspace:
 
-include::example$snip_a-{project-context}-workspace-example.adoc[]
+include::example$snip_{project-context}-a-workspace-example.adoc[]
 
 This table provides the memory requirements for each workspace component:
 
