--- a/modules/administration-guide/examples/snip_che-technology-preview.adoc
+++ b/modules/administration-guide/examples/snip_che-technology-preview.adoc
@@ -1,21 +1,16 @@
-//To indicate that a feature is in Technology Preview, include the snippets/technology-preview.adoc file in the feature’s assembly or module to keep the supportability wording consistent across Technology Preview features. Provide a value for the :FeatureName: variable before you include this module.
+//To indicate that a feature is in Technology Preview, include the examples/snip_che-technology-preview.adoc file in the feature’s assembly or module to keep the supportability wording consistent across Technology Preview features. 
+//Provide a value for the :FeatureName: variable before you include this module.
 //e.g.:
 //:FeatureName: The XYZ plug-in
-//include::snippets/technology-preview.adoc[]
+//include::examples/snip_che-technology-preview.adoc[]
 //If you don't do this, the result will be an incorrect replacement.
 
 [IMPORTANT]
 ====
 [subs="attributes+"]
-{FeatureName} is a Technology Preview feature only. Technology Preview features
-are not supported with Red Hat production service level agreements (SLAs) and
-might not be functionally complete. Red Hat does not recommend using them
-in production. These features provide early access to upcoming product
-features, enabling customers to test functionality and provide feedback during
-the development process.
-
-For more information about the support scope of Red Hat Technology Preview
-features, see https://access.redhat.com/support/offerings/techpreview/.
+{FeatureName} is a Technology Preview feature only. 
+Technology Preview features might not be functionally complete. 
+These features provide early access to upcoming product features, enabling customers to test functionality and provide feedback during the development process.
 ====
 // Undefine {FeatureName} attribute, so that any mistakes are easily spotted
 :!FeatureName:
