fix: add DWO uninstallation crosslink
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -36,3 +36,9 @@ $ {prod-cli} server:delete -n __<{prod-namespace}>__
 ----
 
 include::example$snip_{project-context}-note-uninstalling-in-minikube-cluster.adoc[]
+
+[NOTE] 
+====
+If {prod-short} was installed from the OpenShift web console, `{prod-cli}` will not uninstall the {devworkspace} operator.
+To uninstall the {devworkspace} Operator, see link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/odc-about-web-terminal.html#deleting-the-devworkspace-operator-dependency[Deleting the {devworkspace} Operator dependency].
+====
