--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -1,3 +1,4 @@
+:_content-type: ASSEMBLY
 :navtitle: Selecting an IDE
 :keywords: user-guide, selecting, IDE
 :page-aliases: che-theia-ide-basics, version-control, using-alternative-ides-in-che, configuring-a-workspace-to-use-an-ide-based-on-the-intellij-platform, building-images-for-ides-based-on-the-intellij-platform, provisioning-the-jetbrains-offline-activation-code, support-for-theia-based-ides, che-theia-troubleshooting, differences-in-how-che-theia-webview-works-on-a-single-host-mode-comparing-to-a-multi-host-mode
@@ -5,122 +6,30 @@
 [id="selecting-an-ide_{context}"]
 = Selecting an IDE
 
-link:https://theia-ide.org/docs/[Eclipse Theia] is the current default editor for {prod-short} but other IDEs are available when starting a workspace. 
+:context: selecting-an-ide
 
-The following alternatives are available:
+The default editor for {prod-short} is link:https://theia-ide.org/docs/[Eclipse Theia] but you can select a different IDE when starting a workspace. Following alternatives to Eclipse Theia are available:
 
-* JetBrains link:https://www.jetbrains.com/help/idea/getting-started.html[IntelliJ IDEA]
-* JetBrains link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
+* JetBrains IDE such as link:https://www.jetbrains.com/help/idea/getting-started.html[IntelliJ IDEA] or link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
 * Visual Studio Code - link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
+* Your own IDE defined with the `inline` directive
 
-To specify an alternative IDE, use either a URL parameter `che-editor` or a `.che/che-editor.yaml` file the Git project.
+When you start a workspace, you can select an IDE by using one of the two following options:
 
-If the editor is unspecified, the latest stable version of Eclipse Theia will open.
+* URL parameter `che-editor`
+* `.che/che-editor.yaml` file
 
-== Using a URL parameter
+include::partial$proc_using-url-parameters-to-select-an-ide.adoc[leveloffset=+1]
 
-When launching a workspace using the factory API, pass in an additional parameter to load the chosen IDE:
+include::example$proc_using-a-{project-context}-editor-file-to-select-an-ide.adoc[leveloffset=+1]
 
-```
-https://<che_fqdn>#<git_repository_url>?che-editor=<editor_key>
-```
+include::example$con_customizing-ide-selection-with-the-{project-context}-editor-file.adoc[leveloffset=+1]
 
-See the `<editor_key>` values for the supported IDEs in xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[Table 1. The <editor_key> values for the supported IDEs].
+include::partial$proc_using-a-custom-plug-in-registry-for-your-ide.adoc[leveloffset=+2]
 
+include::partial$proc_using-a-web-reference-for-your-ide.adoc[leveloffset=+2]
 
-== Using a {prod-short} Editor file 
-
-To define an editor different from the default, place a `che-editor.yaml` file in a `.che` folder in the root of the Git project, and point it at the ID of the editor of choice:
-
-```
-id: che-incubator/che-idea/latest
-```
-
-Link to a sample file: https://github.com/che-samples/gradle-demo-project/blob/devfilev2/.che/che-editor.yaml
-
-For a list of supported IDs, see xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[Optional parameters for the URLs for starting a new workspace].
-
-[NOTE]
-====
-Experimental IDEs can be loaded from the default plug-in registry, using the IDs shown in link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[che-editors.yaml].
-====
-
-
-=== Using a custom plug-in registry for additional editors
-
-To include different editors than those from the default list in the {prod-short} plug-in registry, setting an optional `registryUrl` directive in `.che/che-editor.yaml`:
-
-```
-id: eclipse/che-theia/next            # mandatory
-registryUrl: https://my-registry.com  # optional
-override:                             # optional
-  containers:
-    - name: theia-ide
-      memoryLimit: 1280Mi
-```
-
-
-=== Using a web reference
-
-To refer to an editor outside the plug-in registry, use the `reference` directive in `.che/che-editor.yaml`:
-
-```
-reference: https://gist.github.com/.../che-editor.yaml # mandatory
-override:                                              # optional
-  containers:
-      - name: theia-ide
-        memoryLimit: 1280Mi 
-```
-
-
-=== Using an embedded editor definition
-
-To put a complete editor definition in the `che-editor.yaml` file, use the `inline` directive:
-
-```
-inline:
-  endpoints:
-    - name: "theia"
-      public: true
-      targetPort: 3100
-      attributes:
-        protocol: http
-        type: ide
-        secure: true
-        cookiesAuthEnabled: true
-        discoverable: false
-    (...)
-  containers:
-    - name: theia-ide
-      image: "quay.io/eclipse/che-theia:next"
-      env:
-        - name: THEIA_PLUGINS
-          value: local-dir:///plugins
-      volumeMounts:
-        - name: plugins
-          path: "/plugins"
-        - name: theia-local
-          path: "/home/theia/.theia"
-      mountSources: true
-      ports:
-        - exposedPort: 3100
-      memoryLimit: "512M"
-      cpuLimit: 1000m
-      cpuRequest: 100m
-  initContainers:
-    - name: remote-runtime-injector
-      image: "quay.io/eclipse/che-theia-endpoint-runtime-binary:next"
-      volumeMounts:
-        - name: remote-endpoint
-          path: "/remote-endpoint"
-          ephemeral: true
-      env:
-        - name: PLUGIN_REMOTE_ENDPOINT_EXECUTABLE
-          value: /remote-endpoint/plugin-remote-endpoint
-        - name: REMOTE_ENDPOINT_VOLUME_NAME
-          value: remote-endpoint
-```
-
+include::partial$proc_using-an-embedded-editor-definition-for-your-ide.adoc[leveloffset=+2]
 
 .Additional resources
 
@@ -128,6 +37,8 @@ inline:
 * link:https://www.jetbrains.com/help/idea/getting-started.html[JetBrains IntelliJ IDEA]
 * link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[JetBrains PyCharm]
 * link:https://github.com/Microsoft/vscode/[Visual Studio Code - Open Source ("Code - OSS")]
+
+:context: {parent-context-of-selecting-an-ide}
 
 
 
