--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -21,9 +21,9 @@ When you start a workspace, you can select an IDE by using one of the two follow
 
 include::partial$proc_using-url-parameters-to-select-an-ide.adoc[leveloffset=+1]
 
-include::example$proc_using-a-{project-context}-editor-file-to-select-an-ide.adoc[leveloffset=+1]
+include::example$proc_using-a-che-editor-file-to-select-an-ide.adoc[leveloffset=+1]
 
-include::example$con_customizing-ide-selection-with-the-{project-context}-editor-file.adoc[leveloffset=+1]
+include::example$con_customizing-ide-selection-with-the-che-editor-file.adoc[leveloffset=+1]
 
 include::partial$proc_using-a-custom-plug-in-registry-for-your-ide.adoc[leveloffset=+2]
 
