--- a/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
+++ b/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
@@ -1,5 +1,5 @@
-[id="using-a-che-prod-editor-file-to-select-an-ide_{context}"]
-== Using a {prod-short} editor file to select an IDE
+[id="using-the-che-prod-editor-file-to-select-an-ide_{context}"]
+== Using the {prod-short} editor file to select an IDE
 
 Use the `che-editor.yaml` file to define a default IDE for the project users. For a list of supported IDs, see xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[Optional parameters for the URLs for starting a new workspace].
 
