--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -14,7 +14,7 @@ The default editor for {prod-short} is link:https://theia-ide.org/docs/[Eclipse 
 * Visual Studio Code - link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
 * Your own IDE defined with the `inline` directive
 
-When you start a workspace, you can select an IDE by using one of the two following options:
+When starting a workspace, you can select an IDE by using one of the two following options:
 
 * URL parameter `che-editor`
 * `.che/che-editor.yaml` file
