--- a/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
+++ b/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
@@ -3,6 +3,6 @@
 
 You can further customize your IDE selection to suit the specific needs of the project by adding various directives to the `che-editor.yaml` file. These customization options include following directives:
 
-* custom plug-in registry
-* web reference
-* embedded editor definition
+* Custom plug-in registry
+* Web reference
+* Embedded editor definition
