--- a/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
+++ b/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
@@ -5,7 +5,8 @@ Use the `che-editor.yaml` file to define a default IDE for the project users. Fo
 
 .Procedure
 
-* Place the `che-editor.yaml` file in the `.che` folder in the root of your project, and point it at the ID of the selected IDE:
+. Place the `che-editor.yaml` file in the `.che` folder in the root directory of your project. 
+. In the `che-editor.yaml` file, specify the ID of the IDE you are selecting.
 +
 ====
 id: che-incubator/che-idea/latest
