--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -8,7 +8,7 @@
 
 :context: selecting-an-ide
 
-The default editor for {prod-short} is link:https://theia-ide.org/docs/[Eclipse Theia] but you can select a different IDE when starting a workspace. Following alternatives to Eclipse Theia are available:
+When you start a {prod-short} workspace, you can use the default IDE, link:https://theia-ide.org/docs/[Eclipse Theia], or select one of the following alternatives:
 
 * JetBrains IDE such as link:https://www.jetbrains.com/help/idea/getting-started.html[IntelliJ IDEA] or link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
 * Visual Studio Code - link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
