--- a/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
@@ -1,7 +1,7 @@
 [id="using-a-custom-plug-in-registry-for-your-ide_{context}"]
 === Using a custom plug-in registry for your IDE
 
-If you want to include different IDEs than the default list in the {prod-short} plug-in registry, use an optional `registryUrl` directive.
+To include different IDEs than the default list in the {prod-short} plug-in registry, use an optional `registryUrl` directive.
 
 .Procedure
 
