--- a/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
@@ -1,13 +1,13 @@
 [id="using-an-embedded-editor-ddefinition-for-your-ide_{context}"]
 === Using an embedded editor definition for your IDE
 
-Fully customize the project IDE by using the `inline` directive to put a complete IDE definition in the `che-editor.yaml`` file 
+If you have specific requirements for your project that aren't addressed by standard IDE behaviour, you can customize the project IDE by using the `inline` directive to put a complete IDE definition in the `che-editor.yaml` file.
 
 .Procedure
 
 * Set an `inline` directive in your `che-editor.yaml` file:
 +
-```
+----
 inline:
   endpoints:
     - name: "theia"
@@ -49,4 +49,4 @@ inline:
           value: /remote-endpoint/plugin-remote-endpoint
         - name: REMOTE_ENDPOINT_VOLUME_NAME
           value: remote-endpoint
-```
+----
