--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -1,15 +1,18 @@
-.The `__<editor_key>__` values for the supported IDEs
+.The `__<editor_key>__` values for the supported IDEs 
+
+The URL parameter for specifying another supported IDE is `che-editor=<editor_key>`as seen in the following table:
+
 |===
 | IDE | `__<editor_key>__` value | Note
 
 
 | link:https://github.com/eclipse-che/che-theia[Che-Theia]
 | `eclipse/che-theia/latest`
-| This is the default IDE that loads in a new workspace without this URL parameter.
+| This is the default IDE that loads in a new workspace without the URL parameter.
 
 | link:https://github.com/eclipse-che/che-theia[Che-Theia]
 | `eclipse/che-theia/next`
-| When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without this URL parameter.
+| When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without the URL parameter.
 
 | link:https://github.com/che-incubator/che-code[Che-Code]
 | `che-incubator/che-code/insiders`
