--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -12,7 +12,7 @@ When you start a {prod-short} workspace, you can use the default IDE, link:https
 
 * JetBrains link:https://www.jetbrains.com/help/idea/getting-started.html[IntelliJ IDEA]
 * JetBrains link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
-* Visual Studio Code - link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
+* Visual Studio Code link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
 * Your own IDE defined with the `inline` directive
 
 When starting a workspace, you can select an IDE by using one of the two following options:
