--- a/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
+++ b/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
@@ -6,7 +6,7 @@ Use the `che-editor.yaml` file to define a default IDE for the project users. Fo
 .Procedure
 
 . Place the `che-editor.yaml` file in the `.che` folder in the root directory of your project. 
-. In the `che-editor.yaml` file, specify the ID of the IDE you are selecting.
+. In the `che-editor.yaml` file, specify the ID of the IDE you are selecting. For example:
 +
 ====
 id: che-incubator/che-idea/latest
@@ -14,5 +14,5 @@ id: che-incubator/che-idea/latest
 
 .Additional resources
 
-* Link to a sample file: https://github.com/che-samples/gradle-demo-project/blob/devfilev2/.che/che-editor.yaml
+* Check the sample file sample link:https://github.com/che-samples/gradle-demo-project/blob/devfilev2/.che/che-editor.yaml[here].
 * Load experimental new IDEs from the default plug-in registry by using the IDs shown in link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[che-editors.yaml].
