--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -1,6 +1,4 @@
-.The `__<editor_key>__` values for the supported IDEs 
-
-The URL parameter for specifying another supported IDE is `che-editor=<editor_key>`as seen in the following table:
+.The URL parameter `__<editor_key>__` values for supported IDEs 
 
 |===
 | IDE | `__<editor_key>__` value | Note
