--- a/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
@@ -5,13 +5,13 @@ To include different IDEs than the default list in the {prod-short} plug-in regi
 
 .Procedure
 
-* Set an optional `registryUrl` directive in your `che-editor.yaml` file:
+* Set an optional `registryUrl` directive in your `che-editor.yaml` file. For example:
 +
-```
+====
 id: eclipse/che-theia/next            # mandatory
 registryUrl: https://my-registry.com  # optional
 override:                             # optional
   containers:
     - name: theia-ide
       memoryLimit: 1280Mi
-```
+====
