--- a/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
@@ -5,12 +5,12 @@ Rather than pointing to a plug-in in your plug-in registry, you can point at a Y
 
 .Procedure
 
-* Set a `reference` directive in your `che-editor.yaml` file:
+* Set a `reference` directive in your `che-editor.yaml` file. For example:
 +
-```
+====
 reference: https://gist.github.com/.../che-editor.yaml # mandatory
 override:                                              # optional
   containers:
       - name: theia-ide
         memoryLimit: 1280Mi 
-```
+====
