--- a/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
@@ -5,9 +5,9 @@ If you have specific requirements for your project that aren't addressed by stan
 
 .Procedure
 
-* Set an `inline` directive in your `che-editor.yaml` file:
+* Set an `inline` directive in your `che-editor.yaml` file. For example:
 +
-----
+====
 inline:
   endpoints:
     - name: "theia"
@@ -49,4 +49,4 @@ inline:
           value: /remote-endpoint/plugin-remote-endpoint
         - name: REMOTE_ENDPOINT_VOLUME_NAME
           value: remote-endpoint
-----
+====
