--- a/modules/end-user-guide/partials/proc_using-url-parameters-to-select-an-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-url-parameters-to-select-an-ide.adoc
@@ -5,11 +5,11 @@ Use URL parameters to select your preferred IDE without impacting the IDE select
 
 .Procedure
 
-* When launching a workspace using the factory API, pass in additional URL parameters to load the chosen IDE:
+* Launch a workspace by using the factory API and pass in additional URL parameters to load the chosen IDE. For example:
 +
-```
+====
 https://<che_fqdn>#<git_repository_url>?che-editor=_<editor_key>_
-```
+====
 
 .Additional resources
 
