--- a/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
@@ -1,7 +1,7 @@
 [id="using-a-web-reference-for-your-ide_{context}"]
 === Using a web reference for your IDE
 
-Rather than pointing to a plug-in in your plug-in registry, you can point at a YAML file directly with the `reference` directive.
+Use a web reference for your IDE by pointing at a YAML file with the `reference` directive.
 
 .Procedure
 
