fix: attributes around pupgrading from prev to next version

--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
@@ -14,7 +14,7 @@ You can install the {image-puller-operator-name} on OpenShift using the OpenShif
 
 * xref:defining-the-memory-parameters-for-the-image-puller.adoc[].
 
-* A web console session with administrative access on the destination OpenShift instance. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console].
+* An OpenShift web console session by a cluster administrator. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console].
 
 .Procedure
 
