--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -1,12 +1,12 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-short} {prod-last-version-pre-dwo} on OpenShift
+:navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 :keywords: administration-guide, migration, devworkspace
 :page-aliases: 
 
-[id="upgrading-{prod-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
+[id="upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
 = Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 
-The workspace engine and authentication system used up to and including {prod-prev-short} version {prod-last-version-pre-dwo} are deprecated. Upgrading from version {prod-last-version-pre-dwo} requires manual steps.
+The workspace engine and authentication system used up to and including {prod-prev-short} version {prod-last-version-pre-dwo} are deprecated, which requires manual steps.
 
 .Prerequisites
 
