--- a/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
@@ -1,18 +1,18 @@
 :_content-type: ASSEMBLY
-:navtitle: Upgrading {prod-short} using the web console
+:navtitle: Upgrading {prod-prev-short} using the OpenShift web console
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases:
 
-[id="upgrading-{prod-id-short}-using-the-web-console_{context}"]
-= Upgrading {prod-short} using the web console
+[id="upgrading-{prod-prev-id-short}-using-the-openshift-web-console_{context}"]
+= Upgrading {prod-prev-short} using the OpenShift web console
 
 You can manually approve an upgrade from an earlier minor version using the {prod} Operator from the Red Hat Ecosystem Catalog in the OpenShift web console.
 
 .Prerequisites
 
-* A web console session with administrative access on the destination OpenShift instance. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console].
+* An OpenShift web console session by a cluster administrator. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/web_console/web-console.html[Accessing the web console].
 
-* An instance of {prod-short} that was installed by using the Red Hat Ecosystem Catalog.
+* An instance of {prod-prev-short} that was installed by using the Red Hat Ecosystem Catalog.
 
 * The approval strategy in the subscription is `Manual`. See xref:specifying-the-update-approval-strategy.adoc[].
 
