--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -1,14 +1,14 @@
 :_content-type: ASSEMBLY
-:navtitle: Upgrading Che
+:navtitle: Upgrading {prod-short}
 :keywords: administration guide, upgrading-che
 :page-aliases: installation-guide:upgrading-che, installation-guide:upgrading-che-known-issues, installation-guide:rolling-back-a-che-upgrade,installation-guide: upgrading-che-namespace-strategies-other-than-per-user
 
 :parent-context-of-upgrading-che: {context}
 
-[id="upgrading-{prod-id-short}_{context}"]
-= Upgrading {prod-short}
+[id="upgrading-{prod-prev-id-short}_{context}"]
+= Upgrading {prod-prev-short}
 
-:context: upgrading-{prod-id-short}
+:context: upgrading-{prod-prev-id-short}
 
 This chapter describes how to upgrade from {prod-prev-short} {prod-prev-ver} to {prod-short} {prod-ver}.
 
