--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -1,10 +1,10 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-short} using the CLI management tool
+:navtitle: Upgrading {prod-prev-short} using the CLI management tool
 :keywords: administration guide, upgrading-che-using-the-cli-management-tool
 :page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool
 
-[id="upgrading-{prod-id-short}-using-the-cli-management-tool_{context}"]
-= Upgrading {prod-short} using the CLI management tool
+[id="upgrading-{prod-prev-id-short}-using-the-cli-management-tool_{context}"]
+= Upgrading {prod-prev-short} using the CLI management tool
 
 This section describes how to upgrade from the previous minor version using the CLI management tool.
 
