fix: undoing some changes

--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -5,10 +5,10 @@
 
 :parent-context-of-upgrading-che: {context}
 
-[id="upgrading-{prod-prev-id-short}_{context}"]
-= Upgrading {prod-prev-short}
+[id="upgrading-{prod-id-short}_{context}"]
+= Upgrading {prod-short}
 
-:context: upgrading-{prod-prev-id-short}
+:context: upgrading-{prod-id-short}
 
 This chapter describes how to upgrade from {prod-prev-short} {prod-prev-ver} to {prod-short} {prod-ver}.
 
