--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
@@ -1,18 +1,16 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-prev-short} in a restricted environment
-:keywords: Upgrading {prod-prev-short} in a restricted environment
+:navtitle: Upgrading {prod-short} in a restricted environment
+:keywords: Upgrading {prod-short} in a restricted environment
 :page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool-in-restricted-environment, installation-guide:upgrading-che-in-restricted-environment
 
-[id="upgrading-{prod-prev-id-short}-using-the-cli-management-tool-in-restricted-environment_{context}"]
-= Upgrading {prod-prev-short} using the CLI management tool in a restricted environment
+[id="upgrading-{prod-id-short}-using-the-cli-management-tool-in-restricted-environment_{context}"]
+= Upgrading {prod-short} using the CLI management tool in a restricted environment
 
-
-This section describes how to upgrade {prod-prev-short} {prod-prev-ver} to {prod-short} {prod-ver} using the CLI management tool in a restricted environment. The upgrade path supports minor version update.
+This section describes how to upgrade {prod} and perform minor version updates by using the CLI management tool in a restricted environment.
 
 .Prerequisites
 
-
-* An instance running {prod-prev-short} {prod-prev-ver}, installed on the same instance of OpenShift using the `{prod-cli} --installer operator` method in the `{prod-namespace}` project. See xref:installing-che-in-a-restricted-environment.adoc[].
+* The {prod-short} instance was installed on OpenShift using the `{prod-cli} --installer operator` method in the `{prod-namespace}` project. See xref:installing-che-in-a-restricted-environment.adoc[].
 
 include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 
