--- a/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
+++ b/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
@@ -1,5 +1,5 @@
 [id="customizing-ide-selection-with-the-che-editor-file_{context}"]
-== Customizing IDE selection with the `che-editor.yaml` file
+= Customizing IDE selection with the `che-editor.yaml` file
 
 You can further customize your IDE selection to suit the specific needs of the project by adding various directives to the `che-editor.yaml` file. These customization options include following directives:
 
