--- a/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-custom-plug-in-registry-for-your-ide.adoc
@@ -1,5 +1,5 @@
 [id="using-a-custom-plug-in-registry-for-your-ide_{context}"]
-=== Using a custom plug-in registry for your IDE
+= Using a custom plug-in registry for your IDE
 
 To include different IDEs than the default list in the {prod-short} plug-in registry, use an optional `registryUrl` directive.
 
