--- a/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-web-reference-for-your-ide.adoc
@@ -1,5 +1,5 @@
 [id="using-a-web-reference-for-your-ide_{context}"]
-=== Using a web reference for your IDE
+= Using a web reference for your IDE
 
 Use a web reference for your IDE by pointing at a YAML file with the `reference` directive.
 
