--- a/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
@@ -1,5 +1,5 @@
 [id="using-an-embedded-editor-ddefinition-for-your-ide_{context}"]
-=== Using an embedded editor definition for your IDE
+= Using an embedded editor definition for your IDE
 
 If you have specific requirements for your project that aren't addressed by standard IDE behaviour, you can customize the project IDE by using the `inline` directive to put a complete IDE definition in the `che-editor.yaml` file.
 
