--- a/modules/end-user-guide/partials/proc_using-url-parameters-to-select-an-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-url-parameters-to-select-an-ide.adoc
@@ -1,5 +1,5 @@
 [id="using-url-parameters-to-select-an-ide_{context}"]
-== Using URL parameters to select an IDE
+= Using URL parameters to select an IDE
 
 Use URL parameters to select your preferred IDE without impacting the IDE selection of other project users.
 
