--- a/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
+++ b/modules/end-user-guide/partials/proc_using-an-embedded-editor-definition-for-your-ide.adoc
@@ -7,7 +7,8 @@ If you have specific requirements for your project that aren't addressed by stan
 
 * Set an `inline` directive in your `che-editor.yaml` file. For example:
 +
-====
+[source,yaml]
+----
 inline:
   endpoints:
     - name: "theia"
