--- a/modules/administration-guide/pages/defining-the-memory-parameters-for-the-image-puller.adoc
+++ b/modules/administration-guide/pages/defining-the-memory-parameters-for-the-image-puller.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Defining the memory settings
+:description: Defining the memory settings
 :keywords: administration-guide, image-puller, configuration
 :page-aliases: .:defining-the-memory-parameters-for-the-image-puller
 
