--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} on OpenShift using CLI
+:description: Installing {prod-short} on OpenShift using CLI
 :keywords: overview, installing-che-on-openshift-4-using-cli
 :page-aliases: installation-guide:installing-che-on-openshift-4-using-cli, overview:installing-che-on-openshift-4-using-cli, installing-che-on-openshift-4-using-cli
 
