--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} on OpenShift using the web console
+:description: Installing {prod-short} on OpenShift using the web console
 :keywords: overview, installing, openshift, web console
 :page-aliases: installation-guide:installing-che-on-openshift-4-using-operatorhub, overview:installing-che-on-openshift-4-using-operatorhub, creating-an-instance-of-the-che-operator, installing-che-on-openshift-4-using-operatorhub
 
