--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {image-puller-name-short} on OpenShift using CLI
+:description: Installing {image-puller-name-short} on OpenShift using CLI
 :keywords: administration-guide, image-puller, openshift, openshift-templates, CLI
 :page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates,installing-image-puller-on-openshift-using-openshift-templates
 
