--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-the-web-console.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {image-puller-name-short} on OpenShift using the web console
+:description: Installing {image-puller-name-short} on OpenShift using the web console
 :keywords: administration-guide, image-puller, openshift, operator, operatorhub
 :page-aliases: .:installing-image-puller-on-openshift-using-operatorhub, installing-image-puller-on-openshift-using-operatorhub
 
