--- a/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
+++ b/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Specifying the update approval strategy
+:description: Specifying the update approval strategy
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases: installation-guide:upgrading-che-using-operatorhub
 
