--- a/modules/end-user-guide/pages/creating-image-pull-secrets.adoc
+++ b/modules/end-user-guide/pages/creating-image-pull-secrets.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Creating image pull Secrets
+:description: Creating image pull Secrets
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
