--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -1,4 +1,5 @@
 :navtitle: Mounting ConfigMaps
+:description: Mounting ConfigMaps
 :keywords: user-guide, configuring, user, configmaps, configmap, mounting, mount
 :page-aliases:
 
