--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -1,4 +1,5 @@
 :navtitle: Mounting Secrets
+:description: Mounting Secrets
 :keywords: user-guide, configuring, user, configmap, secret, secrets, mounting, mount
 :page-aliases:
 
