--- a/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
+++ b/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
@@ -1,4 +1,5 @@
 :navtitle: Requesting persistent storage for workspaces
+:description: Requesting persistent storage for workspaces
 :keywords: user-guide, configuring, user, volumes, persistent, volume, claim, mounting, mount
 :page-aliases:
 
