--- a/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
@@ -1,4 +1,5 @@
 :navtitle: Using a Git credentials store
+:description: Using a Git credentials store
 :keywords: user-guide, configuring, user, secrets
 :page-aliases: 
 
