--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -1,4 +1,5 @@
 :navtitle: Using credentials and configurations in workspaces
+:description: Using credentials and configurations in workspaces
 :keywords: user-guide, configuring, user, configmaps, secrets, volumes, mounting, mount
 :page-aliases: 
 
