--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Defining the list of images
+:description: Defining the list of images
 :keywords: administration-guide, image-puller, configuration
 :page-aliases: .:defining-the-list-of-images-to-pull
 
