--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -2,6 +2,7 @@
 // = The Woopra telemetry plugin
 :_content-type: PROCEDURE
 :navtitle: The Woopra telemetry plug-in
+:description: The Woopra telemetry plug-in
 :keywords: extensions, telemetry
 :page-aliases: extensions:the-woopra-telemetry-plug-in
 
