--- a/modules/administration-guide/pages/upgrading-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-the-chectl-management-tool.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Upgrading the chectl management tool
+:description: Upgrading the chectl management tool
 :keywords: overview, upgrading, chectl, cli
 :page-aliases:
 
