--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Selecting an IDE
+:description: Selecting an IDE
 :keywords: user-guide, selecting, IDE
 :page-aliases: che-theia-ide-basics, version-control, using-alternative-ides-in-che, configuring-a-workspace-to-use-an-ide-based-on-the-intellij-platform, building-images-for-ides-based-on-the-intellij-platform, provisioning-the-jetbrains-offline-activation-code, support-for-theia-based-ides, che-theia-troubleshooting, differences-in-how-che-theia-webview-works-on-a-single-host-mode-comparing-to-a-multi-host-mode
 
