--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -1,5 +1,5 @@
 :_content-type: PROCEDURE
-:navtitle: Deploying {prod-short} with support for Git repositories with self-signed certificates
+:navtitle: Git with self-signed certificates
 :description: Deploying {prod-short} with support for Git repositories with self-signed certificates
 :keywords: administration guide, deploying-che-with-support-for-git-repositories-with-self-signed-certificates
 :page-aliases: installation-guide:deploying-che-with-support-for-git-repositories-with-self-signed-certificates
