Apply suggestions from code review

--- a/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-web-console.adoc
@@ -1,6 +1,6 @@
 :_content-type: ASSEMBLY
-:navtitle: Upgrading {prod-short} using the web console
-:description: Upgrading {prod-short} using the web console
+:navtitle: Upgrading {prod-short} using the OpenShift web console
+:description: Upgrading {prod-short} using the OpenShift web console
 :keywords: administration guide, upgrading-che-using-operatorhub
 :page-aliases:
 
