--- a/modules/end-user-guide/pages/troubleshooting-che.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-che.adoc
@@ -1,5 +1,5 @@
-:navtitle: Troubleshooting Che
-:description: Troubleshooting Che
+:navtitle: Troubleshooting {prod-short}
+:description: Troubleshooting {prod-short}
 :keywords: user-guide, troubleshooting-che
 :page-aliases: .:troubleshooting-che
 
