--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-short} in restricted environment
-:description: Upgrading {prod-short} in restricted environment
-:keywords: Upgrading {prod-short} in restricted environment
+:navtitle: Upgrading {prod-short} in a restricted environment
+:description: Upgrading {prod-short} in a restricted environment
+:keywords: Upgrading {prod-short} in a restricted environment
 :page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool-in-restricted-environment, installation-guide:upgrading-che-in-restricted-environment
 
 [id="upgrading-{prod-id-short}-using-the-cli-management-tool-in-restricted-environment_{context}"]
