fix: added description (#2348)
Co-authored-by: Fabrice Flore-Thébault <ffloreth@redhat.com>

--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Git with self-signed certificates
+:description: Deploying {prod-short} with support for Git repositories with self-signed certificates
 :keywords: administration guide, deploying-che-with-support-for-git-repositories-with-self-signed-certificates
 :page-aliases: installation-guide:deploying-che-with-support-for-git-repositories-with-self-signed-certificates
 
