--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
+:description: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 :keywords: administration-guide, migration, devworkspace
 :page-aliases: 
 
