--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Upgrading {prod-short}
+:description: Upgrading {prod-short}
 :keywords: administration guide, upgrading-che
 :page-aliases: installation-guide:upgrading-che, installation-guide:upgrading-che-known-issues, installation-guide:rolling-back-a-che-upgrade,installation-guide: upgrading-che-namespace-strategies-other-than-per-user
 
