--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -4,6 +4,8 @@
 :keywords: user-guide, selecting, IDE
 :page-aliases: che-theia-ide-basics, version-control, using-alternative-ides-in-che, configuring-a-workspace-to-use-an-ide-based-on-the-intellij-platform, building-images-for-ides-based-on-the-intellij-platform, provisioning-the-jetbrains-offline-activation-code, support-for-theia-based-ides, che-theia-troubleshooting, differences-in-how-che-theia-webview-works-on-a-single-host-mode-comparing-to-a-multi-host-mode
 
+:parent-context-of-selecting-an-ide: {context}
+
 [id="selecting-an-ide_{context}"]
 = Selecting an IDE
 
@@ -41,6 +43,4 @@ include::partial$proc_using-an-embedded-editor-definition-for-your-ide.adoc[leve
 * link:https://github.com/Microsoft/vscode/[Visual Studio Code - Open Source ("Code - OSS")]
 
 :context: {parent-context-of-selecting-an-ide}
-
-
 
