--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -45,7 +45,7 @@ The URL parameter for specifying another supported IDE is `che-editor=__<editor_
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 ----
 
-include::example$snip_{project-context}-supported-ides.adoc[]
+include::example$snip_{project-context}-editor-key-values.adoc[]
 
 == URL parameter for starting duplicate workspaces
 
