preparing branch for collaboration

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -13,6 +13,13 @@
 * xref:selecting-an-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
 ** xref:using-a-git-credentials-store.adoc[]
+** xref:using-artifact-repositories-in-a-restricted-environment.adoc[]
+*** xref:maven.adoc[]
+*** xref:gradle.adoc[]
+*** xref:nuget.adoc[]
+*** xref:python.adoc[]
+*** xref:go.adoc[]
+*** xref:npm.adoc[]
 ** xref:creating-image-pull-secrets.adoc[]
 ** xref:mounting-secrets.adoc[]
 ** xref:mounting-configmaps.adoc[]
