--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -32,7 +32,7 @@ $ curl -X GET \
 [subs="+quotes,macros,attributes"]
 ----
 $ curl -i -X DELETE \
-  --header 'Authorization: Bearer __<token>__' \
+  --cookie '_oauth_proxy=__<token>__' \
   pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/__<id>__
 ----
 
