--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -23,7 +23,7 @@ Following this procedure makes the service compliant to EU General Data Protecti
 [subs="+quotes,macros,attributes"]
 ----
 $ curl -X GET \
-  --header 'Authorization: Bearer __<token>__' \
+  --cookie '_oauth_proxy=__<token>__' \
   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/find?name=__<username>__'
 ----
 
