fix: fix curl commands

--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -19,7 +19,7 @@ Following this procedure makes the service compliant to EU General Data Protecti
 
 .Procedure
 
-. Get the __<username>__ user __<id>__:
+. Get the __<username>__ user __<id>__ `id`:
 +
 [subs="+quotes,macros,attributes"]
 ----
@@ -47,8 +47,8 @@ $ curl -i -X DELETE \
 [subs="+quotes,macros,attributes"]
 ----
 $ curl -i -X DELETE \
-  --header 'Authorization: Bearer __<user-token>__' \
-  pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/__<user-id>__
+  --cookie '_oauth_proxy=__<token>__' \
+  pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/__<id>__
 ----
 
 .Additional resources
