--- a/modules/end-user-guide/pages/maven.adoc
+++ b/modules/end-user-guide/pages/maven.adoc
@@ -5,3 +5,96 @@
 [id="using-maven-artifact-repositories"]
 = Using Maven artifact repositories
 
+# Preparation
+* Apply nexus.cer.yaml Secret
+* Apply settings.xml.yaml ConfigMap
+* Apply init-truststore.yaml ConfigMap
+
+# Workspace init
+* Start a maven based workspace
+* Open a new terminal in the `tools` container
+* source ~/init-truststore.sh
+
+//maven/init-truststore.yaml
+----
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: init-truststore
+  annotations:
+    controller.devfile.io/mount-as: subpath
+    controller.devfile.io/mount-path: /home/user/
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-configmap: 'true'
+data:
+  init-truststore.sh: |
+    #!/usr/bin/env bash
+
+    keytool -importcert -noprompt -file /home/user/certs/nexus.cer -cacerts -storepass changeit
+----
+
+//maven/nexus.cer.yaml
+----
+kind: Secret
+apiVersion: v1
+metadata:
+  name: nexus-cer
+  annotations:
+    controller.devfile.io/mount-path: /home/user/certs
+    controller.devfile.io/mount-as: file
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-secret: 'true'
+data:
+  nexus.cer: >-
+    <base64_encoded_public_cert(base64 -w0 nexus.cer)>
+----
+
+//maven/settings.xml.yaml
+----
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: settings-xml
+  annotations:
+    controller.devfile.io/mount-as: subpath
+    controller.devfile.io/mount-path: /home/user/.m2
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-configmap: 'true'
+data:
+  settings.xml: |
+    <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+      <localRepository/>
+      <interactiveMode/>
+      <offline/>
+      <pluginGroups/>
+      <servers/>
+      <mirrors>
+        <mirror>
+          <id>redhat-ga-mirror</id>
+          <name>Red Hat GA</name>
+          <url>https://<nexus_route>/repository/redhat-ga/</url>
+          <mirrorOf>redhat-ga</mirrorOf>
+        </mirror>
+        <mirror>
+          <id>maven-central-mirror</id>
+          <name>Maven Central</name>
+          <url>https://<nexus_route>/repository/maven-central/</url>
+          <mirrorOf>maven-central</mirrorOf>
+        </mirror>
+        <mirror>
+          <id>jboss-public-repository-mirror</id>
+          <name>JBoss Public Maven Repository</name>
+          <url>https://<nexus_route>/repository/jboss-public/</url>
+          <mirrorOf>jboss-public-repository</mirrorOf>
+        </mirror>
+      </mirrors>
+      <proxies/>
+      <profiles/>
+      <activeProfiles/>
+    </settings>
+----
+
