--- a/modules/end-user-guide/pages/npm.adoc
+++ b/modules/end-user-guide/pages/npm.adoc
@@ -5,3 +5,37 @@
 [id="using-npm-artifact-repositories"]
 = Using npm artifact repositories
 
+//npm/disconnected-env.yaml
+----
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: disconnected-env
+  annotations:
+    controller.devfile.io/mount-as: env
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-configmap: 'true'
+data:
+  NODE_EXTRA_CA_CERTS: /home/user/certs/nexus.cer
+  NPM_CONFIG_REGISTRY: >-
+    https://<nexus_route>/repository/npm-all/
+----
+
+//npm/nexus.cer.yaml
+----
+kind: Secret
+apiVersion: v1
+metadata:
+  name: nexus-cer
+  annotations:
+    controller.devfile.io/mount-path: /home/user/certs
+    controller.devfile.io/mount-as: file
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-secret: 'true'
+data:
+  nexus.cer: >-
+    <base64_encoded_public_cert(base64 -w0 nexus.cer)>
+----
+
