--- a/modules/end-user-guide/pages/python.adoc
+++ b/modules/end-user-guide/pages/python.adoc
@@ -5,3 +5,37 @@
 [id="using-python-artifact-repositories"]
 = Using Python artifact repositories
 
+//python/disconnected-env.yaml
+----
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: disconnected-env
+  annotations:
+    controller.devfile.io/mount-as: env
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-configmap: 'true'
+data:
+  PIP_INDEX_URL: >-
+    https://<nexus_route>/repository/pypi-all/
+  PIP_CERT: /home/user/certs/nexus.cer
+----
+
+//python/nexus.cer.yaml
+----
+kind: Secret
+apiVersion: v1
+metadata:
+  name: nexus-cer
+  annotations:
+    controller.devfile.io/mount-path: /home/user/certs
+    controller.devfile.io/mount-as: file
+  labels:
+    controller.devfile.io/mount-to-devworkspace: 'true'
+    controller.devfile.io/watch-secret: 'true'
+data:
+  nexus.cer: >-
+    <base64_encoded_public_cert(base64 -w0 nexus.cer)>
+----
+
